# python_container_system

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENTS_SUMMARY.md  MANIFEST.in  PROJECT_SUMMARY.md  README.md  README_KO.md  pyproject.toml  quick_test_array.py  setup.py
.github/workflows/: ci.yml
benchmarks/: PERFORMANCE_REPORT.md  performance_benchmark.py
container_module/: __init__.py
container_module/adapters/: __init__.py  json_v2_adapter.py
container_module/core/: __init__.py  container.py  value.py  value_store.py  value_types.py
container_module/di/: __init__.py  adapters.py
container_module/messaging/: __init__.py  builder.py
container_module/serializers/: __init__.py  messagepack_serializer.py
container_module/utilities/: __init__.py
container_module/values/: __init__.py  array_value.py  bool_value.py  bytes_value.py  container_value.py  null_value.py  numeric_value.py  string_value.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARRAY_VALUE_GUIDE.md  CHANGELOG.md  FEATURES.md  JSON_V2_ADAPTER.md  PROJECT_STRUCTURE.md  README.md
docs/contributing/: TESTING.md
docs/guides/: FAQ.md  TROUBLESHOOTING.md
docs/performance/: BENCHMARKS.md
examples/: advanced_usage.py  basic_usage.py  di_example.py  json_v2_compatibility.py  messagepack_example.py
tests/: __init__.py  run_edge_case_tests.py  test_array_value.py  test_container.py  test_cross_language_array.py  test_di_adapters.py  test_edge_cases.py  test_long_range_checking.py  test_messaging_builder.py  test_null_value.py  test_value_store.py  test_value_types.py
