[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-container-system"
version = "1.0.0"
description = "A high-performance type-safe container framework for Python"
readme = "README.md"
authors = [{name = "kcenon", email = "kcenon@naver.com"}]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/kcenon/python_container_system"
Documentation = "https://github.com/kcenon/python_container_system/blob/main/README.md"
Repository = "https://github.com/kcenon/python_container_system"
"Bug Tracker" = "https://github.com/kcenon/python_container_system/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=container_module --cov-report=html --cov-report=term"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0301",  # line-too-long (handled by black)
    "C0325",  # superfluous-parens
    "C0413",  # wrong-import-position
    "C0415",  # import-outside-toplevel
    "R0801",  # duplicate-code
    "R0902",  # too-many-instance-attributes
    "R0904",  # too-many-public-methods
    "R0911",  # too-many-return-statements
    "R0912",  # too-many-branches
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "R0917",  # too-many-positional-arguments
    "R1705",  # no-else-return
    "W0107",  # unnecessary-pass
    "W0212",  # protected-access
    "W0404",  # reimported
    "W0511",  # fixme (TODO comments)
    "W0611",  # unused-import
    "W0613",  # unused-argument
    "W0621",  # redefined-outer-name
    "W0707",  # raise-missing-from
    "W0718",  # broad-exception-caught
]

[tool.pylint.format]
max-line-length = 88
